[gd_scene load_steps=14 format=2]

[ext_resource path="res://Miner/Miner.gd" type="Script" id=1]
[ext_resource path="res://Miner/MINER.png" type="Texture" id=2]
[ext_resource path="res://Miner/MINER2.png" type="Texture" id=3]
[ext_resource path="res://Miner/CLEAN SPRITE.png" type="Texture" id=4]
[ext_resource path="res://Miner/PICKAXE.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.2898
height = 14.0595

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.8401, 33.5613 )

[sub_resource type="Animation" id=6]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.54714, 2.68631 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4.42953, 10.8273 )

[sub_resource type="Animation" id=9]
resource_name = "Attack"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 88.0, 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Block"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.0637913, -17.884 ), Vector2( -0.106956, -9.59564 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 13.9091, 14 ), Vector2( 17.8308, 28.6362 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.42525, 2.33346 ), Vector2( 1.42525, 3.09382 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Area2D/CollisionShape2D:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.0153385, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ SubResource( 3 ), SubResource( 3 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Area2D/CollisionShape2D2:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Miner" type="KinematicBody2D" groups=[
"Miner",
]]
script = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
editor/display_folded = true

[node name="HitboxArea" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 6 )
anims/Movement = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Pickaxe" type="Sprite" parent="Sprite3"]
position = Vector2( 11.9281, 13.7229 )
scale = Vector2( 1.37304, 2.59198 )
z_index = 1
texture = ExtResource( 5 )
offset = Vector2( 0.0637913, -9.42806 )

[node name="Area2D" type="Area2D" parent="Sprite3/Pickaxe"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite3/Pickaxe/Area2D"]
position = Vector2( -0.0637913, -17.884 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sprite3/Pickaxe/Area2D"]
position = Vector2( -1.09921, -10.3874 )
shape = SubResource( 8 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite3/Pickaxe"]
anims/Attack = SubResource( 9 )
anims/Block = SubResource( 10 )

[connection signal="body_entered" from="Sprite3/Pickaxe/Area2D" to="." method="_on_Area2D_body_entered"]
